[package]
name = "pinokkio"
description = "Minimal async runtime optimized for running NPC logic as minimal async subroutines"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[features]
timers = []

[dev-dependencies]
futures = { version = "0.3" }

[dependencies]
oneshot = { version = "0.1", default-features = false, features = ["std"] }
